# LearningDataScience

./: mkdocs.yml  pyproject.toml  statistic.ipynb
scratch/: linear_algebra.py  setup.py  statistic.py
